2007-03-18  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpbrushcore.c: cosmetic cleanup.

2007-03-18  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpbrushcore.c
	(gimp_brush_core_scale_mask)
	(gimp_brush_core_scale_pixmap)
	(gimp_brush_core_get_brush_mask): remove parameter
	"gdouble scale" and use core->scale.

	(gimp_brush_core_paste_canvas)
	(gimp_brush_core_replace_canvas)
	(gimp_brush_core_get_brush_mask)
	(gimp_brush_core_color_area_with_pixmap): don't pass core->scale.
	As below, passing anything else makes no sense.

	(gimp_brush_core_interpolate): cleanup.

2007-03-18  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpbrushcore.[ch]
	(gimp_brush_core_color_area_with_pixmap): removed parameters
	"GimpImage *dest" (because it's always the passed drawable's
	image) and "gdouble scale" (because passing anything but
	brush_core->scale makes no sense whatsoever).

	* app/paint/gimppaintbrush.c (_gimp_paintbrush_motion): changed
	accordingly.

2007-03-18  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpbrushcore.c: simplified brush scale calculation by
	making sure that brush_core->scale always contains a value that's
	suited as input for gimp_brush_scale_mask/pixmap() (bug #419290).

	(gimp_brush_core_calc_brush_size): removed this function. All
	places can now call gimp_brush_scale_size() directly with
	core->scale as parameter.

	(gimp_brush_core_calc_brush_scale): new function which returns
	a linear scale factor which contains both the area-based pressure
	scale factor and the linear paint options scale factor.

	(gimp_brush_core_start)
	(gimp_brush_core_get_paint_area): use the new function instead
	of doing these calculations manually.

	(gimp_brush_core_interpolate): remove call to
	gimp_brush_core_scale_brush_size() and use core->scale directly.

	(gimp_brush_core_get_paint_area)
	(gimp_brush_core_scale_mask)
	(gimp_brush_core_scale_pixmap): use gimp_brush_scale_size()
	instead of the removed gimp_brush_core_scale_brush_size().
