@@ -316,8 +316,8 @@ GType gimp_transform_direction_get_type (void) G_GNUC_CONST;
 
 typedef enum
 {
-  GIMP_TRANSFORM_FORWARD,   /*< desc="Forward" >*/
-  GIMP_TRANSFORM_BACKWARD   /*< desc="Backward" >*/
+  GIMP_TRANSFORM_FORWARD,   /*< desc="Normal (Forward)" >*/
+  GIMP_TRANSFORM_BACKWARD   /*< desc="Corrective (Backward)" >*/
 } GimpTransformDirection;
 
 
