@@ -1,3 +1,9 @@
+2007-03-19  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/gimpbaseenums.[ch]: changed labels for
+	GimpTransformDirection to make the corrective transform feature
+	more obvious.
+
 2007-03-18  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint/gimpbrushcore.c: cosmetic cleanup.
